azure/k8s/rabbitmq/ingress-rabbitmq-mgmt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rabbitmq-mgmt
  namespace: rabbitmq-system
spec:
  tls:
  - hosts:
    - "rabbitmq.geek.zone"
  rules: 
    - host: rabbitmq.geek.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geek-zone-cluster
                port: 
                  number: 15672
  ingressClassName: nginx
